--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
       "allowSyntheticDefaultImports": true,
       "lib": ["es2018", "dom"],
       "moduleResolution": "node",
+      "strictNullChecks": true,
+      "esModuleInterop": true
     },
     "files": [
       "global.d.ts"
